landing_page_style.css
body{
	font-size: 16px;
	margin: 0;
	text-rendering: optimizeLegibility;
}

h1{
	font-family: "acumin-pro-condensed",sans-serif;
	font-weight: 700;
	font-size: 4.768em;
	margin-bottom: 0px;
	color: #ffd633;
}

h2{
	font-family: "acumin-pro-condensed",sans-serif;
	font-size:1.953em;
	font-weight: 400;
	margin-top: 0px;
	margin-bottom: 0px;
	color: #232323;
}

h3{
	font-family: "acumin-pro-condensed",sans-serif;
	font-size:1.563em;
	padding-top: 15px;
	font-weight: 400;
	color: #232323;
	margin-top: 20px;
	margin-bottom: 3px;
}

h4{
	font-family: "acumin-pro-condensed",sans-serif;
	font-size:1.25em;
	font-weight: 400;
	color: #232323;
	margin-top: 1px;
	margin-bottom: 1px;
}

p{
	font-family: 'Open Sans', sans-serif;
	font-size: 1em;
	color: #232323;
	margin-top: 8px;
	margin-bottom: 16px;
}

li{
	font-family: 'Open Sans', sans-serif;
	font-size: 1em;
	color: #232323;
	list-style-type: none;
}

.header{
	font-weight: 700;
}

.container {
	margin: auto;
	max-width: 85%;
	padding-top: 2%;
	padding-bottom: 9%;
}

.desktop_image{
	display: block;
	max-width: 150px;
	height: auto;
	margin-top: -28px;
}

.nav {
	background-color:#232323;
	height: 40px;
}

.intro {
	padding-top: 2%;
	padding-bottom: 4%;
}

.introbackground{
	background-color: #f7f7f7; 
	padding-top: 20px;
}

.intro_text{
	margin-top: 10%;
}

.item {
	padding-top: 20px;
}

.resume{

}

a:link{
	text-decoration: underline;
	color: #232323;
	font-family: 'Open Sans', sans-serif;
}

a:visited {
    text-decoration: none;
    color:#000000;
    font-family: 'Open Sans', sans-serif;
}

a:hover {
    text-decoration: underline;
    font-weight: 800;
    font-family: 'Open Sans', sans-serif;
}

a:active {
    text-decoration: underline;
    font-weight: 800;
    font-family: 'Open Sans', sans-serif;
}

.aboutbackground{
	background-color: #ffd633; 
	padding-top: 3%;
	padding-bottom: 1%;

}

.about{
}

.footer {
	background-color:#232323;
	height: 40px;
	margin-top: 5%;
}


@media (min-width: 600px) and (max-width: 699px) {

	
p{
	margin-top: 8px;
	margin-bottom: 16px;
}

.container {
	margin: auto;
	max-width: 90%;
	padding-top: 20px;
}

.desktop_image{
	display: block;
	float: left;
	max-width: 200px;
	height: auto;
	margin-top: -35px;
}
	
.resume{
	max-width: 100%;
}

.intro {
	max-width: 100%;
	padding-bottom: 65%;
}

.intro_text{
	margin-left: 45%;
	max-width: 50%;	
	margin-top: -3%;

}
	
.item {

}
}
@media (min-width: 700px) and (max-width: 874px){

body{
	font-size: 17px;
}

.container {
	margin: auto;
	max-width: 95%;
	padding-top: 20px;
	margin-right: 25px;
	margin-left: 25px;
}

.about{
	margin-left: 30px;
}
.desktop_image{
	display: block;
	float: left;
	margin-left: 5%;
	max-width: 225px;
	height: auto;
	margin-top: -40px;
}

.resume{
	max-width: 90%;
	margin: auto;
}

.about{
	max-width: 90%;
}

.intro_text{
	margin-left: 45%;
	max-width: 50%;	
	margin-top: -3%;
}
	
}
@media (min-width: 875px) and (max-width: 1124px) {

body{
	font-size: 17px;
}

.container {
	max-width: 70%;
	margin: auto;
}

.desktop_image{
	display: block;
	float: left;
	margin-top: -56px;
	max-width: 250px;
	height: auto;
}

.resume{
	max-width: 100%;
}

.about{
	max-width: 90%;
}

.introbackground{
	padding-top: 40px;
}

.intro_text{
	margin-left: 46%;
	max-width: 60%;	
	margin-top: -2%;

}

}

@media (min-width: 1125px) {


body{
	font-size: 17px;
}

p{
	margin-top: 8px;
	margin-bottom: 16px;
}

.container {
	max-width: 55%;
	margin: auto;
}

.desktop_image{
	display: block;
	float: left;
	margin-top: -60px;
	max-width: 255px;
	height: auto;
	margin-right: 3%;
}

.resume{
	max-width: 100%;
}

.introbackground{
	padding-top: 40px;
}

.intro_text{
	margin-left: 43%;
	max-width: 60%;
	margin-top: -5%;}
}

